# WholebodyPoseEstimation

./: .gitignore  Dockerfile  Dockerfile_cpu  README.md  pyproject.toml  requirements.txt  setup.py
codes/: .gitignore  comparison.py  vit_vs_mediapipe_rrtm.py
codes/drawing/: inference_image.ipynb  inference_webcam.ipynb
codes/filtering/: inference_webcam_filters.ipynb
codes/islr_models/: .env_example  1.Download_datasets.ipynb  2.LoadData.ipynb  3.TrainingGCN-BERT.ipynb  requirements.txt  training_gcn_bert.py  training_pipeline.py
codes/islr_models/training/: train.py
codes/islr_models/training/dataset/: augmentations_spatial.py  dataloader.py
codes/islr_models/training/models/: util.py
codes/islr_models/training/models/gcn_bert/: gcn_bert.py  util.py
codes/islr_models/training/models/pose_tgcn/: pose_tgcn.py
codes/islr_models/training/models/silt/: silt.py
codes/islr_models/training/models/spoter/: spoter.py
codes/mediapipe/: inference_image.ipynb  inference_webcam.ipynb  webcam.py
codes/rtmpose/: inference_image.ipynb  inference_webcam.ipynb
codes/vitpose/: inference_image.ipynb  inference_webcam.ipynb
data/: README.md  meta_data.json
data/videos/: README.md
docker/: Dockerfile.cpu  Dockerfile.gpu  client.py  docker-compose-cpu.yaml  docker-compose-gpu.yaml  requirements.txt  stream.py
results/: .gitignore  README.md
src/enhancing/: brightness.py
src/filters/: filtering_kalman.py  filtering_mean.py
src/models/dwpose/: dwpose.py
src/models/mediapipe/: map_mp2coco.py  meta_data.json  model.py  vit_vs_mediapipe.py
src/models/rtmpose/: model.py  refine.py  topdown_demo_with_mmdet.py
src/models/vitpose/: model.py
src/wholebodypose/filters/: filtering_nlms.py  sequence.py
src/wholebodypose/utils/: files.py  vision.py
src/wholebodypose/utils/video/: converters.py
src/wholebodypose/video/: converters.py  video2pose.py
